--- a/app/src/main/res/layout/badges_profile_widget.xml
+++ b/app/src/main/res/layout/badges_profile_widget.xml
@@ -1,84 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+  android:orientation="vertical">
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/badgesShimmerContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="visible">
-
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_margin="2dp"
-                android:background="@color/background" />
-
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_margin="2dp"
-                android:background="@color/background" />
-
-
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_margin="2dp"
-                android:background="@color/background" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/background" />
-
-        </LinearLayout>
-    </com.facebook.shimmer.ShimmerFrameLayout>
+  <com.facebook.shimmer.ShimmerFrameLayout
+    android:id="@+id/badgesShimmerContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <LinearLayout
-        android:id="@+id/badgesContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:gravity="center"
+      android:orientation="horizontal"
+      android:visibility="visible">
+
+      <ImageView
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_margin="2dp"
+        android:background="@color/background" />
+
+      <ImageView
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_margin="2dp"
+        android:background="@color/background" />
+
+
+      <ImageView
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_margin="2dp"
+        android:background="@color/background" />
+
+      <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/badgeImageView_1"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/tab1" />
-
-        <ImageView
-            android:id="@+id/badgeImageView_2"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/tab2" />
-
-
-        <ImageView
-            android:id="@+id/badgeImageView_3"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/tab3" />
-
-        <ImageView
-            android:id="@+id/arrowImageView"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/arrow_right" />
+        android:layout_margin="2dp"
+        android:background="@color/background" />
 
     </LinearLayout>
+  </com.facebook.shimmer.ShimmerFrameLayout>
+
+  <LinearLayout
+    android:id="@+id/badgesContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:visibility="gone">
+
+    <ImageView
+      android:id="@+id/badgeImageView_1"
+      android:layout_width="32dp"
+      android:layout_height="32dp"
+      android:layout_margin="2dp" />
+
+    <ImageView
+      android:id="@+id/badgeImageView_2"
+      android:layout_width="32dp"
+      android:layout_height="32dp"
+      android:layout_margin="2dp" />
+
+
+    <ImageView
+      android:id="@+id/badgeImageView_3"
+      android:layout_width="32dp"
+      android:layout_height="32dp"
+      android:layout_margin="2dp" />
+
+    <ImageView
+      android:id="@+id/arrowImageView"
+      android:layout_width="16dp"
+      android:layout_height="16dp"
+      android:layout_margin="2dp"
+      android:src="@drawable/arrow_right" />
+
+  </LinearLayout>
 </merge>
