--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -251,4 +251,10 @@
       android:textColor="#979797"
       android:textSize="14sp" />
   </RelativeLayout>
+
+  <View
+    android:layout_width="match_parent"
+    android:layout_height="16dp"
+    android:layout_below="@+id/bottom_cell"
+    android:background="@color/black_color" />
 </RelativeLayout>
