--- a/app/src/main/res/layout/parallel_feed_activity.xml
+++ b/app/src/main/res/layout/parallel_feed_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/root"
+  android:id="@+id/content_frame"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
@@ -9,5 +9,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dedede" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
