--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -4,5 +4,5 @@
   <size
     android:width="1dp"
     android:height="1dp" />
-  <solid android:color="@color/black_color" />
+  <solid android:color="#F0F0F0" />
 </shape>
