--- a/app/src/main/res/layout/video_category_selection_item.xml
+++ b/app/src/main/res/layout/video_category_selection_item.xml
@@ -3,7 +3,9 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
-  android:layout_margin="16dp"
+  android:layout_marginStart="16dp"
+  android:layout_marginTop="16dp"
+  android:layout_marginBottom="16dp"
   android:orientation="vertical">
 
   <androidx.cardview.widget.CardView
@@ -12,10 +14,10 @@
     app:cardCornerRadius="10dp">
 
     <androidx.appcompat.widget.AppCompatImageView
-    android:id="@+id/categoryImageView"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:scaleType="centerCrop" />
+      android:id="@+id/categoryImageView"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:scaleType="centerCrop" />
   </androidx.cardview.widget.CardView>
 
   <com.mycity4kids.widget.CustomFontTextView
