--- a/app/src/main/res/layout/parallel_feed_popup.xml
+++ b/app/src/main/res/layout/parallel_feed_popup.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:src="@drawable/ic_bookmark" />
 
     <TextView
@@ -20,6 +20,6 @@
         android:layout_gravity="center_vertical"
         android:text="bookmark"
         android:textColor="@color/black_color"
-        android:textSize="18dp" />
+        android:textSize="18sp" />
 
 </LinearLayout>
